basic-parallel-filechunk/spring-commandline/src/test/resources/copybooks/bad/with-88-levels.cbl
01  STATUS-REC.
05  STATUS-CODE       PIC X.
88  STATUS-OK         VALUE 'Y'.
88  STATUS-FAIL       VALUE 'N'.
